@@ -1,7 +1,6 @@
 package stubidp.stubidp.repositories;
 
-import org.joda.time.DateTime;
-import org.joda.time.LocalDate;
+import stubidp.saml.extensions.extensions.impl.BaseMdsSamlObjectUnmarshaller;
 import stubidp.saml.utils.core.domain.AddressFactory;
 import stubidp.saml.utils.core.domain.AuthnContext;
 import stubidp.saml.utils.core.domain.Gender;
@@ -9,6 +8,8 @@ import stubidp.stubidp.domain.DatabaseEidasUser;
 import stubidp.stubidp.domain.DatabaseIdpUser;
 import stubidp.stubidp.domain.MatchingDatasetValue;
 
+import java.time.Instant;
+import java.time.ZoneId;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -32,10 +33,10 @@ final class HardCodedTestUserList {
                 Collections.singletonList(createMdsValue("Cornelius")),
                 Collections.singletonList(createMdsValue("Bauer")),
                 Optional.of(createMdsValue(Gender.MALE)),
-                Collections.singletonList(createMdsValue(LocalDate.parse("1984-02-29"))),
-                List.of(new AddressFactory().create(Collections.singletonList("1 Two St"), "1A 2BC", null, null, null, null, true),
-                        new AddressFactory().create(Collections.singletonList("221b Baker St."), "W4 1SH", null, null, DateTime.parse("2007-09-27"), DateTime.parse("2007-09-28"), true),
-                        new AddressFactory().create(Collections.singletonList("1 Goose Lane"), "M1 2FG", null, null, DateTime.parse("2006-09-29"), DateTime.parse("2006-09-8"), false)
+                Collections.singletonList(createMdsValue(dateToInstant("1984-02-29"))),
+                List.of(new AddressFactory().createNoDates(Collections.singletonList("1 Two St"), "1A 2BC", null, null, true),
+                        new AddressFactory().create(Collections.singletonList("221b Baker St."), "W4 1SH", null, null, dateToInstant("2007-09-27"), dateToInstant("2007-09-28"), true),
+                        new AddressFactory().create(Collections.singletonList("1 Goose Lane"), "M1 2FG", null, null, dateToInstant("2006-09-29"), dateToInstant("2006-09-08"), false)
                 ),
                 AuthnContext.LEVEL_2));
 
@@ -47,8 +48,8 @@ final class HardCodedTestUserList {
                 Collections.singletonList(createMdsValue("Seamus")),
                 Collections.singletonList(createMdsValue("McFly")),
                 Optional.of(createMdsValue(Gender.FEMALE)),
-                Collections.singletonList(createMdsValue(LocalDate.parse("1968-06-12"))),
-                Collections.singletonList(new AddressFactory().create(Collections.singletonList("1 Two St"), "1A 2BC", null, null, null, null, true)),
+                Collections.singletonList(createMdsValue(dateToInstant("1968-06-12"))),
+                Collections.singletonList(new AddressFactory().createNoDates(Collections.singletonList("1 Two St"), "1A 2BC", null, null, true)),
                 AuthnContext.LEVEL_2));
 
 
@@ -60,9 +61,9 @@ final class HardCodedTestUserList {
                 Collections.emptyList(),
                 Collections.singletonList(createMdsValue("Griffin")),
                 Optional.of(createMdsValue(Gender.NOT_SPECIFIED)),
-                Collections.singletonList(createMdsValue(LocalDate.parse("1983-06-21"))),
-                List.of(new AddressFactory().create(Collections.singletonList("Lion's Head Inn"), "1A 2BC", null, null, DateTime.now().minusYears(1), null, true),
-                        new AddressFactory().create(Collections.singletonList("Ye Olde Inn"), "1A 2BB", null, null, DateTime.now().minusYears(3), DateTime.now().minusYears(1), false)),
+                Collections.singletonList(createMdsValue(dateToInstant("1983-06-21"))),
+                List.of(new AddressFactory().create(Collections.singletonList("Lion's Head Inn"), "1A 2BC", null, null, Instant.now().atZone(ZoneId.of("UTC")).minusYears(1).toInstant(), null, true),
+                        new AddressFactory().create(Collections.singletonList("Ye Olde Inn"), "1A 2BB", null, null, Instant.now().atZone(ZoneId.of("UTC")).minusYears(3).toInstant(), Instant.now().atZone(ZoneId.of("UTC")).minusYears(1).toInstant(), false)),
                 AuthnContext.LEVEL_2));
 
         sacredUsers.add(new DatabaseIdpUser(
@@ -71,10 +72,10 @@ final class HardCodedTestUserList {
                 "bar",
                 Collections.singletonList(createMdsValue("J")),
                 Collections.emptyList(),   //No middle names that we could find. :)
-                List.of(createMdsValue("Moriarti"), new MatchingDatasetValue<>("Barnes", DateTime.parse("2006-09-29"), DateTime.parse("2006-09-8"), true)),
+                List.of(createMdsValue("Moriarti"), new MatchingDatasetValue<>("Barnes", dateToInstant("2006-09-29"), dateToInstant("2006-09-08"), true)),
                 Optional.of(createMdsValue(Gender.NOT_SPECIFIED)),
-                Collections.singletonList(createMdsValue(LocalDate.parse("1822-11-27"))),
-                Collections.singletonList(new AddressFactory().create(Collections.singletonList("10 Two St"), "1A 2BC", null, null, null, null, true)),
+                Collections.singletonList(createMdsValue(dateToInstant("1822-11-27"))),
+                Collections.singletonList(new AddressFactory().createNoDates(Collections.singletonList("10 Two St"), "1A 2BC", null, null, true)),
                 AuthnContext.LEVEL_2));
 
         sacredUsers.add(new DatabaseIdpUser(
@@ -85,7 +86,7 @@ final class HardCodedTestUserList {
                 Collections.emptyList(),
                 Collections.singletonList(createMdsValue("Riggs")),
                 Optional.empty(),
-                Collections.singletonList(createMdsValue(LocalDate.parse("1970-04-12"))),
+                Collections.singletonList(createMdsValue(dateToInstant("1970-04-12"))),
                 Collections.emptyList(),
                 AuthnContext.LEVEL_2));
 
@@ -93,73 +94,73 @@ final class HardCodedTestUserList {
                 idpFriendlyId + "-complete",
                 UUID.randomUUID().toString(),
                 "bar",
-                List.of(new MatchingDatasetValue<>("Jack", DateTime.now(), DateTime.now(), true),
-                        new MatchingDatasetValue<>("Spud", DateTime.now(), DateTime.now(), true)),
-                List.of(new MatchingDatasetValue<>("Cornelius", DateTime.now(), DateTime.now(), true),
-                        new MatchingDatasetValue<>("Aurelius", DateTime.now(), DateTime.now(), true)),
-                List.of(new MatchingDatasetValue<>("Bauer", DateTime.now(), DateTime.now(), true),
-                        new MatchingDatasetValue<>("Superman", DateTime.now().minusDays(5), DateTime.now().minusDays(3), true)),
-                Optional.of(new MatchingDatasetValue<>(Gender.MALE, DateTime.now(), DateTime.now(), true)),
-                List.of(new MatchingDatasetValue<>(LocalDate.parse("1984-02-29"), DateTime.now(), DateTime.now(), true),
-                        new MatchingDatasetValue<>(LocalDate.parse("1984-03-01"), DateTime.now(), DateTime.now(), true)),
-                List.of(new AddressFactory().create(Collections.singletonList("1 Two St"), "1A 2BC", "Something", "dummy uprn", DateTime.now(), DateTime.now(), true),
-                        new AddressFactory().create(Collections.singletonList("2 Three St"), "1B 2CD", "Something else", "dummy second uprn", DateTime.now(), DateTime.now(), true)),
+                List.of(new MatchingDatasetValue<>("Jack", Instant.now(), Instant.now(), true),
+                        new MatchingDatasetValue<>("Spud", Instant.now(), Instant.now(), true)),
+                List.of(new MatchingDatasetValue<>("Cornelius", Instant.now(), Instant.now(), true),
+                        new MatchingDatasetValue<>("Aurelius", Instant.now(), Instant.now(), true)),
+                List.of(new MatchingDatasetValue<>("Bauer", Instant.now(), Instant.now(), true),
+                        new MatchingDatasetValue<>("Superman", Instant.now().atZone(ZoneId.of("UTC")).minusDays(5).toInstant(), Instant.now().atZone(ZoneId.of("UTC")).minusDays(3).toInstant(), true)),
+                Optional.of(new MatchingDatasetValue<>(Gender.MALE, Instant.now(), Instant.now(), true)),
+                List.of(new MatchingDatasetValue<>(dateToInstant("1984-02-29"), Instant.now(), Instant.now(), true),
+                        new MatchingDatasetValue<>(dateToInstant("1984-03-01"), Instant.now(), Instant.now(), true)),
+                List.of(new AddressFactory().create(Collections.singletonList("1 Two St"), "1A 2BC", "Something", "dummy uprn", Instant.now(), Instant.now(), true),
+                        new AddressFactory().create(Collections.singletonList("2 Three St"), "1B 2CD", "Something else", "dummy second uprn", Instant.now(), Instant.now(), true)),
                 AuthnContext.LEVEL_2));
 
         sacredUsers.add(new DatabaseIdpUser(
                 idpFriendlyId + "-loa1",
                 UUID.randomUUID().toString(),
                 "bar",
-                Collections.singletonList(new MatchingDatasetValue<>("Jessica", DateTime.now(), null, false)),
-                Collections.singletonList(new MatchingDatasetValue<>("", DateTime.now(), null, false)),
-                Collections.singletonList(new MatchingDatasetValue<>("Rabbit", DateTime.now(), null, false)),
-                Optional.of(new MatchingDatasetValue<>(Gender.FEMALE, DateTime.now(), null, false)),
-                Collections.singletonList(new MatchingDatasetValue<>(LocalDate.parse("1960-03-23"), DateTime.now(), null, false)),
+                Collections.singletonList(new MatchingDatasetValue<>("Jessica", Instant.now(), null, false)),
+                Collections.singletonList(new MatchingDatasetValue<>("", Instant.now(), null, false)),
+                Collections.singletonList(new MatchingDatasetValue<>("Rabbit", Instant.now(), null, false)),
+                Optional.of(new MatchingDatasetValue<>(Gender.FEMALE, Instant.now(), null, false)),
+                Collections.singletonList(new MatchingDatasetValue<>(dateToInstant("1960-03-23"), Instant.now(), null, false)),
 
-                List.of(new AddressFactory().create(Collections.singletonList("1 Two St"), "1A 2BC", "Something", "dummy uprn", DateTime.now(), null, false),
-                        new AddressFactory().create(Collections.singletonList("2 Three St"), "1B 2CD", "Something else", "dummy second uprn", DateTime.now(), DateTime.now(), false)),
+                List.of(new AddressFactory().create(Collections.singletonList("1 Two St"), "1A 2BC", "Something", "dummy uprn", Instant.now(), null, false),
+                        new AddressFactory().create(Collections.singletonList("2 Three St"), "1B 2CD", "Something else", "dummy second uprn", Instant.now(), Instant.now(), false)),
                 AuthnContext.LEVEL_1));
 
         sacredUsers.add(new DatabaseIdpUser(
                 idpFriendlyId + "-loa2",
                 UUID.randomUUID().toString(),
                 "bar",
-                Collections.singletonList(new MatchingDatasetValue<>("Roger", DateTime.now(), DateTime.now(), true)),
-                Collections.singletonList(new MatchingDatasetValue<>("", DateTime.now(), DateTime.now(), true)),
-                Collections.singletonList(new MatchingDatasetValue<>("Rabbit", DateTime.now(), DateTime.now(), true)),
-                Optional.of(new MatchingDatasetValue<>(Gender.MALE, DateTime.now(), DateTime.now(), true)),
-                Collections.singletonList(new MatchingDatasetValue<>(LocalDate.parse("1958-04-09"), DateTime.now(), DateTime.now(), true)),
+                Collections.singletonList(new MatchingDatasetValue<>("Roger", Instant.now(), Instant.now(), true)),
+                Collections.singletonList(new MatchingDatasetValue<>("", Instant.now(), Instant.now(), true)),
+                Collections.singletonList(new MatchingDatasetValue<>("Rabbit", Instant.now(), Instant.now(), true)),
+                Optional.of(new MatchingDatasetValue<>(Gender.MALE, Instant.now(), Instant.now(), true)),
+                Collections.singletonList(new MatchingDatasetValue<>(dateToInstant("1958-04-09"), Instant.now(), Instant.now(), true)),
 
-                List.of(new AddressFactory().create(Collections.singletonList("1 Two St"), "1A 2BC", "Something", "dummy uprn", DateTime.now(), DateTime.now(), true),
-                        new AddressFactory().create(Collections.singletonList("2 Three St"), "1B 2CD", "Something else", "dummy second uprn", DateTime.now(), DateTime.now(), true)),
+                List.of(new AddressFactory().create(Collections.singletonList("1 Two St"), "1A 2BC", "Something", "dummy uprn", Instant.now(), Instant.now(), true),
+                        new AddressFactory().create(Collections.singletonList("2 Three St"), "1B 2CD", "Something else", "dummy second uprn", Instant.now(), Instant.now(), true)),
                 AuthnContext.LEVEL_2));
 
         sacredUsers.add(new DatabaseIdpUser(
                 idpFriendlyId + "-loa3",
                 UUID.randomUUID().toString(),
                 "bar",
-                Collections.singletonList(new MatchingDatasetValue<>("Apollo", DateTime.now(), null, true)),
-                Collections.singletonList(new MatchingDatasetValue<>("", DateTime.now(), null, true)),
-                Collections.singletonList(new MatchingDatasetValue<>("Eagle", DateTime.now(), null, true)),
-                Optional.of(new MatchingDatasetValue<>(Gender.FEMALE, DateTime.now(), null, true)),
-                Collections.singletonList(new MatchingDatasetValue<>(LocalDate.parse("1969-07-20"), DateTime.now(), null, true)),
+                Collections.singletonList(new MatchingDatasetValue<>("Apollo", Instant.now(), null, true)),
+                Collections.singletonList(new MatchingDatasetValue<>("", Instant.now(), null, true)),
+                Collections.singletonList(new MatchingDatasetValue<>("Eagle", Instant.now(), null, true)),
+                Optional.of(new MatchingDatasetValue<>(Gender.FEMALE, Instant.now(), null, true)),
+                Collections.singletonList(new MatchingDatasetValue<>(dateToInstant("1969-07-20"), Instant.now(), null, true)),
 
-                List.of(new AddressFactory().create(Collections.singletonList("1 Four St"), "1A 2BD", "Something", "dummy uprn", DateTime.now(), null, true),
-                        new AddressFactory().create(Collections.singletonList("2 Five St"), "1B 2RD", "Something else", "dummy second uprn", DateTime.now(), DateTime.now(), true)),
+                List.of(new AddressFactory().create(Collections.singletonList("1 Four St"), "1A 2BD", "Something", "dummy uprn", Instant.now(), null, true),
+                        new AddressFactory().create(Collections.singletonList("2 Five St"), "1B 2RD", "Something else", "dummy second uprn", Instant.now(), Instant.now(), true)),
                 AuthnContext.LEVEL_3));
 
         sacredUsers.add(new DatabaseIdpUser(
                 idpFriendlyId + "-loax",
                 UUID.randomUUID().toString(),
                 "bar",
-                Collections.singletonList(new MatchingDatasetValue<>("Bugs", DateTime.now(), DateTime.now(), true)),
-                Collections.singletonList(new MatchingDatasetValue<>("", DateTime.now(), DateTime.now(), true)),
-                Collections.singletonList(new MatchingDatasetValue<>("Nummy", DateTime.now(), DateTime.now(), true)),
-                Optional.of(new MatchingDatasetValue<>(Gender.MALE, DateTime.now(), DateTime.now(), true)),
-                Collections.singletonList(new MatchingDatasetValue<>(LocalDate.parse("1958-04-09"), DateTime.now(), DateTime.now(), true)),
+                Collections.singletonList(new MatchingDatasetValue<>("Bugs", Instant.now(), Instant.now(), true)),
+                Collections.singletonList(new MatchingDatasetValue<>("", Instant.now(), Instant.now(), true)),
+                Collections.singletonList(new MatchingDatasetValue<>("Nummy", Instant.now(), Instant.now(), true)),
+                Optional.of(new MatchingDatasetValue<>(Gender.MALE, Instant.now(), Instant.now(), true)),
+                Collections.singletonList(new MatchingDatasetValue<>(dateToInstant("1958-04-09"), Instant.now(), Instant.now(), true)),
 
-                List.of(new AddressFactory().create(Collections.singletonList("1 Two St"), "1A 2BC", "Something", "dummy uprn", DateTime.now(), DateTime.now(), true),
-                        new AddressFactory().create(Collections.singletonList("2 Three St"), "1B 2CD", "Something else", "dummy second uprn", DateTime.now(), DateTime.now(), true)),
+                List.of(new AddressFactory().create(Collections.singletonList("1 Two St"), "1A 2BC", "Something", "dummy uprn", Instant.now(), Instant.now(), true),
+                        new AddressFactory().create(Collections.singletonList("2 Three St"), "1B 2CD", "Something else", "dummy second uprn", Instant.now(), Instant.now(), true)),
                 AuthnContext.LEVEL_X));
 
         sacredUsers.add(new DatabaseIdpUser(
@@ -170,8 +171,8 @@ final class HardCodedTestUserList {
                 Collections.singletonList(createMdsValue("😎")),
                 Collections.singletonList(createMdsValue("🙃")),
                 Optional.of(createMdsValue(Gender.FEMALE)),
-                Collections.singletonList(createMdsValue(LocalDate.parse("1968-06-12"))),
-                Collections.singletonList(new AddressFactory().create(List.of("🏠"), "🏘", null, null, null, null, true)),
+                Collections.singletonList(createMdsValue(dateToInstant("1968-06-12"))),
+                Collections.singletonList(new AddressFactory().createNoDates(List.of("🏠"), "🏘", null, null, true)),
                 AuthnContext.LEVEL_2));
 
         // this user matches one user in the example local matching service
@@ -184,9 +185,9 @@ final class HardCodedTestUserList {
                 Collections.emptyList(),
                 Collections.singletonList(createMdsValue("Bloggs")),
                 Optional.of(createMdsValue(Gender.NOT_SPECIFIED)),
-                Collections.singletonList(createMdsValue(LocalDate.parse("1970-01-01"))),
+                Collections.singletonList(createMdsValue(dateToInstant("1970-01-01"))),
                 List.of(new AddressFactory().create(List.of("The White Chapel Building, 10 Whitechapel High St", "London", "United Kingdom"), "E1 8DX",
-                        null, null, DateTime.now().minusYears(1), null, true)),
+                        null, null, Instant.now().atZone(ZoneId.of("UTC")).minusYears(1).toInstant(), null, true)),
                 AuthnContext.LEVEL_2));
 
         sacredUsers.forEach(DatabaseIdpUser::hashPassword);
@@ -205,7 +206,7 @@ final class HardCodedTestUserList {
                 Optional.empty(),
                 createMdsValue("Bauer"),
                 Optional.empty(),
-                createMdsValue(LocalDate.parse("1984-02-29")),
+                createMdsValue(dateToInstant("1984-02-29")),
                 AuthnContext.LEVEL_2));
 
         sacredUsers.add(new DatabaseEidasUser(
@@ -216,7 +217,7 @@ final class HardCodedTestUserList {
                 Optional.empty(),
                 createMdsValue("McFly"),
                 Optional.empty(),
-                createMdsValue(LocalDate.parse("1968-06-12")),
+                createMdsValue(dateToInstant("1968-06-12")),
                 AuthnContext.LEVEL_2));
 
         // These names contain characters from ISO/IEC 8859-15 which we regard as Latin.
@@ -228,7 +229,7 @@ final class HardCodedTestUserList {
                 Optional.empty(),
                 createMdsValue("Snježana"),
                 Optional.empty(),
-                createMdsValue(LocalDate.parse("1978-06-12")),
+                createMdsValue(dateToInstant("1978-06-12")),
                 AuthnContext.LEVEL_2));
 
         sacredUsers.add(new DatabaseEidasUser(
@@ -239,7 +240,7 @@ final class HardCodedTestUserList {
                 Optional.of(createMdsValue("Γεώργιος")),
                 createMdsValue("Panathinaikos"),
                 Optional.of(createMdsValue("Παναθηναϊκός")),
-                createMdsValue(LocalDate.parse("1967-06-12")),
+                createMdsValue(dateToInstant("1967-06-12")),
                 AuthnContext.LEVEL_2));
 
         sacredUsers.add(new DatabaseEidasUser(
@@ -250,7 +251,7 @@ final class HardCodedTestUserList {
                 Optional.empty(),
                 createMdsValue("Griffin"),
                 Optional.empty(),
-                createMdsValue(LocalDate.parse("1983-06-21")),
+                createMdsValue(dateToInstant("1983-06-21")),
                 AuthnContext.LEVEL_2));
 
         sacredUsers.add(new DatabaseEidasUser(
@@ -260,7 +261,7 @@ final class HardCodedTestUserList {
                 Optional.empty(),
                 createMdsValue("Surname"),
                 Optional.empty(),
-                createMdsValue(LocalDate.parse("1822-11-27")),
+                createMdsValue(dateToInstant("1822-11-27")),
                 AuthnContext.LEVEL_2));
 
         sacredUsers.add(new DatabaseEidasUser(
@@ -271,62 +272,62 @@ final class HardCodedTestUserList {
                 Optional.empty(),
                 createMdsValue("Riggs"),
                 Optional.empty(),
-                createMdsValue(LocalDate.parse("1970-04-12")),
+                createMdsValue(dateToInstant("1970-04-12")),
                 AuthnContext.LEVEL_2));
 
         sacredUsers.add(new DatabaseEidasUser(
                 idpFriendlyId + "-complete",
                 UUID.randomUUID().toString(),
                 "bar",
-                new MatchingDatasetValue<>("Jack", DateTime.now(), DateTime.now(), true),
+                new MatchingDatasetValue<>("Jack", Instant.now(), Instant.now(), true),
                 Optional.empty(),
-                new MatchingDatasetValue<>("Bauer", DateTime.now(), DateTime.now(), true),
+                new MatchingDatasetValue<>("Bauer", Instant.now(), Instant.now(), true),
                 Optional.empty(),
-                new MatchingDatasetValue<>(LocalDate.parse("1984-02-29"), DateTime.now(), DateTime.now(), true),
+                new MatchingDatasetValue<>(dateToInstant("1984-02-29"), Instant.now(), Instant.now(), true),
                 AuthnContext.LEVEL_2));
 
         sacredUsers.add(new DatabaseEidasUser(
                 idpFriendlyId + "-loa1",
                 UUID.randomUUID().toString(),
                 "bar",
-                new MatchingDatasetValue<>("Jessica", DateTime.now(), null, false),
+                new MatchingDatasetValue<>("Jessica", Instant.now(), null, false),
                 Optional.empty(),
-                new MatchingDatasetValue<>("Rabbit", DateTime.now(), null, false),
+                new MatchingDatasetValue<>("Rabbit", Instant.now(), null, false),
                 Optional.empty(),
-                new MatchingDatasetValue<>(LocalDate.parse("1960-03-23"), DateTime.now(), null, false),
+                new MatchingDatasetValue<>(dateToInstant("1960-03-23"), Instant.now(), null, false),
                 AuthnContext.LEVEL_1));
 
         sacredUsers.add(new DatabaseEidasUser(
                 idpFriendlyId + "-loa2",
                 UUID.randomUUID().toString(),
                 "bar",
-                new MatchingDatasetValue<>("Roger", DateTime.now(), DateTime.now(), true),
+                new MatchingDatasetValue<>("Roger", Instant.now(), Instant.now(), true),
                 Optional.empty(),
-                new MatchingDatasetValue<>("Rabbit", DateTime.now(), DateTime.now(), true),
+                new MatchingDatasetValue<>("Rabbit", Instant.now(), Instant.now(), true),
                 Optional.empty(),
-                new MatchingDatasetValue<>(LocalDate.parse("1958-04-09"), DateTime.now(), DateTime.now(), true),
+                new MatchingDatasetValue<>(dateToInstant("1958-04-09"), Instant.now(), Instant.now(), true),
                 AuthnContext.LEVEL_2));
 
         sacredUsers.add(new DatabaseEidasUser(
                 idpFriendlyId + "-loa3",
                 UUID.randomUUID().toString(),
                 "bar",
-                new MatchingDatasetValue<>("Apollo", DateTime.now(), null, true),
+                new MatchingDatasetValue<>("Apollo", Instant.now(), null, true),
                 Optional.empty(),
-                new MatchingDatasetValue<>("Eagle", DateTime.now(), null, true),
+                new MatchingDatasetValue<>("Eagle", Instant.now(), null, true),
                 Optional.empty(),
-                new MatchingDatasetValue<>(LocalDate.parse("1969-07-20"), DateTime.now(), null, true),
+                new MatchingDatasetValue<>(dateToInstant("1969-07-20"), Instant.now(), null, true),
                 AuthnContext.LEVEL_3));
 
         sacredUsers.add(new DatabaseEidasUser(
                 idpFriendlyId + "-loax",
                 UUID.randomUUID().toString(),
                 "bar",
-                new MatchingDatasetValue<>("Bugs", DateTime.now(), DateTime.now(), true),
+                new MatchingDatasetValue<>("Bugs", Instant.now(), Instant.now(), true),
                 Optional.empty(),
-                new MatchingDatasetValue<>("Nummy", DateTime.now(), DateTime.now(), true),
+                new MatchingDatasetValue<>("Nummy", Instant.now(), Instant.now(), true),
                 Optional.empty(),
-                new MatchingDatasetValue<>(LocalDate.parse("1958-04-09"), DateTime.now(), DateTime.now(), true),
+                new MatchingDatasetValue<>(dateToInstant("1958-04-09"), Instant.now(), Instant.now(), true),
                 AuthnContext.LEVEL_X));
 
         sacredUsers.add(new DatabaseEidasUser(idpFriendlyId + "-emoji",
@@ -336,11 +337,15 @@ final class HardCodedTestUserList {
                 Optional.of(createMdsValue("GRINNING FACE")),
                 createMdsValue("🙃"),
                 Optional.of(createMdsValue("UPSIDE-DOWN FACE")),
-                createMdsValue(LocalDate.parse("1968-06-12")),
+                createMdsValue(dateToInstant("1968-06-12")),
                 AuthnContext.LEVEL_2));
 
         sacredUsers.forEach(DatabaseEidasUser::hashPassword);
         return sacredUsers;
+    }
+
+    private static Instant dateToInstant(String date) {
+        return BaseMdsSamlObjectUnmarshaller.InstantFromDate.of(date);
     }
 
     private static <T> MatchingDatasetValue<T> createMdsValue(T value) {
@@ -348,6 +353,6 @@ final class HardCodedTestUserList {
             return null;
         }
 
-        return new MatchingDatasetValue<>(value, DateTime.now().minusDays(1), null, true);
+        return new MatchingDatasetValue<>(value, Instant.now().atZone(ZoneId.of("UTC")).minusDays(1).toInstant(), null, true);
     }
 }
